--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
       <title>Welcome to Library!</title>
     </head>
     <body>
-        <div><a href="/">Home</a></div>
+        <div><a href="/request">Book Requests</a></div>
         <hr>
         {% block content %}{% endblock %}
     </body>
